# sql_mcp_server

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: generate_api_key.py  remove_api_key.py
src/sql_mcp_server/: auth.py  config.py  errors.py  instances.py  logging_utils.py  main.py
src/sql_mcp_server/db/: base.py  factory.py  mssql.py  mysql.py  postgres.py  sqlite.py
src/sql_mcp_server/middleware/: sql_validator.py
src/sql_mcp_server/tools/: query.py  schema.py
tests/: test_auth.py  test_sql_validator.py
