[project]
name = "sql-mcp-server"
version = "0.1.0"
description = "Secure multi-database MCP server using FastMCP"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Team" }]

dependencies = [
  "fastmcp",
  "sqlparse",
  "pyodbc",
  "psycopg2-binary",
  "pymysql",
]

[project.scripts]
sql-mcp-server = "sql_mcp_server.main:run"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
